# reflection-agent

./: .gitignore  README.md  pyproject.toml  requirements.txt
core/: __init__.py  reflection_agent.py
prompts/: __init__.py  prompt_formatter.py  prompt_templates.py  system_messages.py
schemas/: __init__.py  output_parsers.py
tests/: example_run.py
utils/: token_utils.py
visualizations/: visualize.py
