[project]
name = "reflectionagent"
version = "0.1.0"
description = "A LangGraph-based reflection agent that iteratively generates and refines high-quality prompts through self-critique and improvement cycles."
readme = "README.md"
requires-python = ">=3.13.5"
dependencies = [
    "langchain-core>=1.2.12",
    "langchain-google-genai>=4.2.0",
    "langgraph>=1.0.8",
    "python-dotenv>=1.2.1",
]
